--- a/conf/enb.conf
+++ b/conf/enb.conf
@@ -16,16 +16,16 @@
 # nof_ports:      Number of Tx ports (1 port default, set to 2 for TM2/3/4)
 #
 #####################################################################
-[agent]
-address = EMPOWER_REPLACE
+#[agent]
+#address = EMPOWER_REPLACE
 
 [enb]
-enb_id = ENB_ID_REPLACE
-mcc = MCC_REPLACE
-mnc = MNC_REPLACE
-mme_addr = EPC_REPLACE
-gtp_bind_addr = LOCAL_REPLACE
-s1c_bind_addr = LOCAL_REPLACE
+enb_id = 0x19B
+mcc = 001
+mnc = 01
+mme_addr = 127.0.1.100
+gtp_bind_addr = 127.0.1.1
+s1c_bind_addr = 127.0.1.100
 n_prb = N_PRB_REPLACE
 #tm = 4
 #nof_ports = 2
