--- a/conf/enb.conf
+++ b/conf/enb.conf
@@ -26,7 +26,7 @@ mnc = 01
 mme_addr = 127.0.1.100
 gtp_bind_addr = 127.0.1.1
 s1c_bind_addr = 127.0.1.100
-n_prb = N_PRB_REPLACE
+n_prb = 50
 #tm = 4
 #nof_ports = 2
 
