--- a/conf/enb.conf
+++ b/conf/enb.conf
@@ -23,9 +23,9 @@
 enb_id = 0x19B
 mcc = 001
 mnc = 01
-mme_addr = 172.17.0.2
+mme_addr = EPC_IP
 gtp_bind_addr = 127.0.1.1
-s1c_bind_addr = 172.17.0.2
+s1c_bind_addr = EPC_IP
 n_prb = 50
 #tm = 4
 #nof_ports = 2
