--- a/enb-deploy.yaml
+++ b/enb-deploy.yaml
@@ -16,7 +16,16 @@ spec:
       labels:
         app: srslte
     spec:
-#      publicIP: 10.244.1.50
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: service-type
+                operator: In
+                values:
+                - srslte
+            topologyKey: kubernetes.io/hostname
       hostname: enb
 #      hostNetwork: true
       containers:
