--- a/conf/enb.conf
+++ b/conf/enb.conf
@@ -22,8 +22,8 @@ enb_id = 0x19B
 mcc = 001
 mnc = 01
 mme_addr = EPC_IP
-gtp_bind_addr = 127.0.1.1
-s1c_bind_addr = EPC_IP
+gtp_bind_addr = LOCAL_INTERFACE_IP
+s1c_bind_addr = LOCAL_INTERFACE_IP
 n_prb = 50
 #tm = 4
 #nof_ports = 2
