--- a/enb-deploy.yaml
+++ b/enb-deploy.yaml
@@ -7,7 +7,7 @@ metadata:
     app: srslte
   name: srslte-deployment
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: srslte
@@ -16,6 +16,16 @@ spec:
       labels:
         app: srslte
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - srslte
+              topologyKey: kubernetes.io/hostname
 #      publicIP: 10.244.1.50
       hostname: enb
 #      hostNetwork: true
